Add label sanitizer and initialize xml2csv function

--- a/xml_to_csv.ipynb
+++ b/xml_to_csv.ipynb
@@ -35,138 +35,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# copy only pngs that have corresponding xml\n",
-    "def get_png(src_dir=\"png/\", dst_dir=\"png_f/\"):\n",
+    "def sanitize_label(df, replace_dict):\n",
     "    \"\"\"\n",
-    "    find PNGs in src_dir that are labeled with XMLS,\n",
-    "    then copy the files to dst_dir\n",
-    "    \n",
+    "    sanitize labels from dataframe\n",
     "    Args:\n",
-    "        src_dir (str): path to files\n",
-    "        dst_dir (str): path to destination directory\n",
+    "        df: pandas dataframe\n",
+    "        replace_dict (str): dictionary containing sanitizing mapping\n",
     "    \"\"\"\n",
-    "\n",
-    "    if not os.path.exists(dst_dir):\n",
-    "        os.makedirs(dst_dir)\n",
-    "        print(f\"created directory: {dst_dir}\")\n",
-    "    \n",
-    "    for keyword in os.listdir(src_dir):\n",
-    "        print(keyword)\n",
-    "        path = os.path.join(src_dir, keyword)\n",
-    "        count = 0\n",
-    "        for f in os.listdir(path):\n",
-    "            if os.path.splitext(f)[1] == '.xml':\n",
-    "                count += 1\n",
-    "                for ext in ['.xml','.png']:\n",
-    "                    src_path = os.path.join(path,os.path.splitext(f)[0]+ext)\n",
-    "                    shutil.copy2(src_path,dst_dir)\n",
-    "\n",
-    "        print(f\"xml count for keyword: {keyword} = {count}\")\n",
-    "    print(\"done\")"
+    "    return df.replace(replace_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_png(src_dir=\"png/\", dst_dir=\"png_f/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lawson 672\n",
-      "family mart 499\n",
-      "7-eleven 175\n"
-     ]
-    }
-   ],
-   "source": [
-    "dict1 = {}\n",
-    "dict1['lawson'] = 672\n",
-    "dict1['family mart'] = 499\n",
-    "dict1['7-eleven'] = 175\n",
-    "for k,v in dict1.items():\n",
-    "    print(k,v)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "lawson\n",
-      "xml count for keyword: lawson = 672\n",
-      "family mart\n",
-      "xml count for keyword: family mart = 499\n",
-      "7-eleven\n",
-      "xml count for keyword: 7-eleven = 175\n"
-     ]
-    }
-   ],
-   "source": [
-    "for keyword in os.listdir(src_dir):\n",
-    "    print(keyword)\n",
-    "    path = os.path.join(src_dir, keyword)\n",
-    "    count = 0\n",
-    "    for f in os.listdir(path):\n",
-    "        if os.path.splitext(f)[1] == '.xml':\n",
-    "            count += 1\n",
-    "        \n",
-    "    print(f\"xml count for keyword: {keyword} = {count}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2692"
+       "(array(['family_mart', 'lawson', '7_eleven'], dtype=object), 3)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1346"
+      ]
+     },
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "(672+499+175)*2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2692\n"
-     ]
-    }
-   ],
-   "source": [
-    "!ls png_f -1 |wc -l"
+    "data_path = \"png_f\"\n",
+    "df = xml_to_csv(data_path)\n",
+    "#sanitize labels\n",
+    "#7-eleven -> 7_eleven\n",
+    "#family mart -> family_mart\n",
+    "replace_dict = {\"7-eleven\":\"7_eleven\",\n",
+    "                \"family mart\":\"family_mart\"}\n",
+    "\n",
+    "df = sanitize_label(df, replace_dict)\n",
+    "df['class'].unique(), df['class'].nunique()\n",
+    "df.filename.nunique()\n",
+    "df.to_csv()"
    ]
   },
   {
