frozen graph and initialize testing

--- a/bash_commands.ipynb
+++ b/bash_commands.ipynb
@@ -93,9 +93,9 @@
     "model=\"ssd_mobilenet_v2\"\n",
     "python object_detection/export_inference_graph.py \\\n",
     "    --input_type image_tensor \\\n",
-    "    --pipeline_config_path=\"/home/andri/konbini_detector/models/${model}/${model}_pipeline.config\" \\\n",
-    "    --trained_checkpoint_prefix=\"/home/andri/konbini_detector/models/${model}/train/model.ckpt-XXXXX\" \\\n",
-    "    --output_directory \"/home/andri/konbini_detector/models/${model}/frozen_graph/\""
+    "    --pipeline_config_path=\"/home/andri/Proj/konbini_detector/models/${model}/${model}_pipeline.config\" \\\n",
+    "    --trained_checkpoint_prefix=\"/home/andri/Proj/konbini_detector/models/${model}/train/model.ckpt-14346\" \\\n",
+    "    --output_directory \"/home/andri/Proj/konbini_detector/models/${model}/frozen_graph/\""
    ]
   }
  ],
@@ -115,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
