--- a/inference.ipynb
+++ b/inference.ipynb
@@ -17,11 +17,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import os\n",
@@ -35,6 +44,7 @@
     "from io import StringIO\n",
     "from matplotlib import pyplot as plt\n",
     "from PIL import Image\n",
+    "from pathlib import Path\n",
     "\n",
     "# This is needed since the notebook is stored in the object_detection folder.\n",
     "sys.path.append(\"..\")\n",
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,13 +81,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":/home/andri/tensorflow/models/research:/home/andri/tensorflow/models/research/slim:\n"
+     ]
+    }
+   ],
    "source": [
-    "from utils import label_map_util\n",
+    "!echo $PYTHONPATH"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/andri/tensorflow/models/research/object_detection/utils/visualization_utils.py:25: UserWarning: \n",
+      "This call to matplotlib.use() has no effect because the backend has already\n",
+      "been chosen; matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
+      "or matplotlib.backends is imported for the first time.\n",
+      "\n",
+      "The backend was *originally* set to 'module://ipykernel.pylab.backend_inline' by the following code:\n",
+      "  File \"/usr/lib/python3.6/runpy.py\", line 193, in _run_module_as_main\n",
+      "    \"__main__\", mod_spec)\n",
+      "  File \"/usr/lib/python3.6/runpy.py\", line 85, in _run_code\n",
+      "    exec(code, run_globals)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/ipykernel_launcher.py\", line 16, in <module>\n",
+      "    app.launch_new_instance()\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/traitlets/config/application.py\", line 658, in launch_instance\n",
+      "    app.start()\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/ipykernel/kernelapp.py\", line 486, in start\n",
+      "    self.io_loop.start()\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/tornado/platform/asyncio.py\", line 127, in start\n",
+      "    self.asyncio_loop.run_forever()\n",
+      "  File \"/usr/lib/python3.6/asyncio/base_events.py\", line 422, in run_forever\n",
+      "    self._run_once()\n",
+      "  File \"/usr/lib/python3.6/asyncio/base_events.py\", line 1432, in _run_once\n",
+      "    handle._run()\n",
+      "  File \"/usr/lib/python3.6/asyncio/events.py\", line 145, in _run\n",
+      "    self._callback(*self._args)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/tornado/ioloop.py\", line 759, in _run_callback\n",
+      "    ret = callback()\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/tornado/stack_context.py\", line 276, in null_wrapper\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/zmq/eventloop/zmqstream.py\", line 536, in <lambda>\n",
+      "    self.io_loop.add_callback(lambda : self._handle_events(self.socket, 0))\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/zmq/eventloop/zmqstream.py\", line 450, in _handle_events\n",
+      "    self._handle_recv()\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/zmq/eventloop/zmqstream.py\", line 480, in _handle_recv\n",
+      "    self._run_callback(callback, msg)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/zmq/eventloop/zmqstream.py\", line 432, in _run_callback\n",
+      "    callback(*args, **kwargs)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/tornado/stack_context.py\", line 276, in null_wrapper\n",
+      "    return fn(*args, **kwargs)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/ipykernel/kernelbase.py\", line 283, in dispatcher\n",
+      "    return self.dispatch_shell(stream, msg)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/ipykernel/kernelbase.py\", line 233, in dispatch_shell\n",
+      "    handler(stream, idents, msg)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/ipykernel/kernelbase.py\", line 399, in execute_request\n",
+      "    user_expressions, allow_stdin)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/ipykernel/ipkernel.py\", line 208, in do_execute\n",
+      "    res = shell.run_cell(code, store_history=store_history, silent=silent)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/ipykernel/zmqshell.py\", line 537, in run_cell\n",
+      "    return super(ZMQInteractiveShell, self).run_cell(*args, **kwargs)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2662, in run_cell\n",
+      "    raw_cell, store_history, silent, shell_futures)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2785, in _run_cell\n",
+      "    interactivity=interactivity, compiler=compiler, result=result)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2909, in run_ast_nodes\n",
+      "    if self.run_code(code, result):\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2963, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"<ipython-input-2-0f0a85121700>\", line 2, in <module>\n",
+      "    get_ipython().run_line_magic('matplotlib', 'inline')\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 2131, in run_line_magic\n",
+      "    result = fn(*args,**kwargs)\n",
+      "  File \"<decorator-gen-107>\", line 2, in matplotlib\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/IPython/core/magic.py\", line 187, in <lambda>\n",
+      "    call = lambda f, *a, **k: f(*a, **k)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/IPython/core/magics/pylab.py\", line 99, in matplotlib\n",
+      "    gui, backend = self.shell.enable_matplotlib(args.gui)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/IPython/core/interactiveshell.py\", line 3051, in enable_matplotlib\n",
+      "    pt.activate_matplotlib(backend)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/IPython/core/pylabtools.py\", line 311, in activate_matplotlib\n",
+      "    matplotlib.pyplot.switch_backend(backend)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/matplotlib/pyplot.py\", line 231, in switch_backend\n",
+      "    matplotlib.use(newbackend, warn=False, force=True)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/matplotlib/__init__.py\", line 1410, in use\n",
+      "    reload(sys.modules['matplotlib.backends'])\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/importlib/__init__.py\", line 166, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"/home/andri/Envs/konbini_detector/lib/python3.6/site-packages/matplotlib/backends/__init__.py\", line 16, in <module>\n",
+      "    line for line in traceback.format_stack()\n",
+      "\n",
+      "\n",
+      "  import matplotlib; matplotlib.use('Agg')  # pylint: disable=multiple-statements\n"
+     ]
+    }
+   ],
+   "source": [
+    "from object_detection.utils import label_map_util\n",
     "\n",
-    "from utils import visualization_utils as vis_util"
+    "from object_detection.utils import visualization_utils as vis_util"
    ]
   },
   {
@@ -100,44 +214,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What model to download.\n",
-    "MODEL_NAME = 'ssd_mobilenet_v1_coco_2017_11_17'\n",
-    "MODEL_FILE = MODEL_NAME + '.tar.gz'\n",
-    "DOWNLOAD_BASE = 'http://download.tensorflow.org/models/object_detection/'\n",
-    "\n",
     "# Path to frozen detection graph. This is the actual model that is used for the object detection.\n",
-    "PATH_TO_CKPT = MODEL_NAME + '/frozen_inference_graph.pb'\n",
+    "PATH_TO_CKPT = 'models/ssd_mobilenet_v2/frozen_graph/frozen_inference_graph.pb'\n",
     "\n",
     "# List of the strings that is used to add correct label for each box.\n",
-    "PATH_TO_LABELS = os.path.join('data', 'mscoco_label_map.pbtxt')\n",
+    "PATH_TO_LABELS = 'data/konbini_label_map.pbtxt'\n",
     "\n",
-    "NUM_CLASSES = 90"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Download Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "opener = urllib.request.URLopener()\n",
-    "opener.retrieve(DOWNLOAD_BASE + MODEL_FILE, MODEL_FILE)\n",
-    "tar_file = tarfile.open(MODEL_FILE)\n",
-    "for file in tar_file.getmembers():\n",
-    "  file_name = os.path.basename(file.name)\n",
-    "  if 'frozen_inference_graph.pb' in file_name:\n",
-    "    tar_file.extract(file, os.getcwd())"
+    "NUM_CLASSES = 3"
    ]
   },
   {
@@ -149,9 +236,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17025993"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "detection_graph = tf.Graph()\n",
     "with detection_graph.as_default():\n",
@@ -172,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,16 +315,16 @@
     "# image1.jpg\n",
     "# image2.jpg\n",
     "# If you want to test the code with your images, just add path to the images to the TEST_IMAGE_PATHS.\n",
-    "PATH_TO_TEST_IMAGES_DIR = 'test_images'\n",
-    "TEST_IMAGE_PATHS = [ os.path.join(PATH_TO_TEST_IMAGES_DIR, 'image{}.jpg'.format(i)) for i in range(1, 3) ]\n",
+    "PATH_TO_TEST_IMAGES_DIR = Path('data/img_test/')\n",
+    "TEST_IMAGE_PATHS = [f for f in PATH_TO_TEST_IMAGES_DIR.iterdir()]\n",
     "\n",
     "# Size, in inches, of the output images.\n",
-    "IMAGE_SIZE = (12, 8)"
+    "IMAGE_SIZE = (12, 12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -295,17 +393,21 @@
     "  # Actual detection.\n",
     "  output_dict = run_inference_for_single_image(image_np, detection_graph)\n",
     "  # Visualization of the results of a detection.\n",
-    "  vis_util.visualize_boxes_and_labels_on_image_array(\n",
-    "      image_np,\n",
-    "      output_dict['detection_boxes'],\n",
-    "      output_dict['detection_classes'],\n",
-    "      output_dict['detection_scores'],\n",
-    "      category_index,\n",
-    "      instance_masks=output_dict.get('detection_masks'),\n",
+    "  res_arr = vis_util.visualize_boxes_and_labels_on_image_array(\n",
+    "      image = image_np,\n",
+    "      boxes = output_dict['detection_boxes'],\n",
+    "      classes = output_dict['detection_classes'],\n",
+    "      scores = output_dict['detection_scores'],\n",
+    "      category_index = category_index,\n",
+    "      instance_masks =output_dict.get('detection_masks'),\n",
     "      use_normalized_coordinates=True,\n",
-    "      line_thickness=8)\n",
-    "  plt.figure(figsize=IMAGE_SIZE)\n",
-    "  plt.imshow(image_np)"
+    "      line_thickness=8,\n",
+    "      min_score_thresh=0.5,\n",
+    "      groundtruth_box_visualization_color='black',\n",
+    "      skip_scores=False,\n",
+    "      skip_labels=False)\n",
+    "  \n",
+    "  plt.imsave(fname=\"{image_path.stem}_result.png\", arr=res_arr)"
    ]
   },
   {
@@ -321,21 +423,21 @@
    "version": "0.3.2"
   },
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
