--- a/train_test_split.ipynb
+++ b/train_test_split.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,29 +14,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2666, 8)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1697, 8)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv(\"data/csv/all_labels.csv\", index_col=0)\n",
+    "df.shape\n",
+    "\n",
+    "df = df[(df['class']=='7_eleven')|(df['class']=='family_mart')]\n",
+    "df.shape\n",
+    "\n",
     "dfg = df.groupby(['filename'])\n",
     "group_list = [dfg.get_group(x) for x in dfg.groups]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df = pd.read_csv(\"data/csv/all_labels.csv\", index_col=0)\n",
+    "# dfg = df.groupby(['filename'])\n",
+    "# group_list = [dfg.get_group(x) for x in dfg.groups]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of unique files in dataset: 1677\n",
-      "number of unique files in training set: 1593\n",
-      "number of unique files in validation set: 84\n",
-      "number of objects in training set: 2540\n",
-      "number of objects in validation set: 126\n"
+      "number of unique files in dataset: 1008\n",
+      "number of unique files in training set: 957\n",
+      "number of unique files in validation set: 51\n",
+      "number of objects in training set: 1608\n",
+      "number of objects in validation set: 89\n"
      ]
     }
    ],
@@ -57,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -83,11 +120,9 @@
        "      <th>class</th>\n",
        "      <th>7_eleven</th>\n",
        "      <th>family_mart</th>\n",
-       "      <th>lawson</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>class</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -95,35 +130,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>7_eleven</th>\n",
-       "      <td>736</td>\n",
-       "      <td>0</td>\n",
+       "      <td>740</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>family_mart</th>\n",
        "      <td>0</td>\n",
-       "      <td>879</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>lawson</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>925</td>\n",
+       "      <td>868</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "class        7_eleven  family_mart  lawson\n",
-       "class                                     \n",
-       "7_eleven          736            0       0\n",
-       "family_mart         0          879       0\n",
-       "lawson              0            0     925"
+       "class        7_eleven  family_mart\n",
+       "class                             \n",
+       "7_eleven          740            0\n",
+       "family_mart         0          868"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -160,11 +186,9 @@
        "      <th>class</th>\n",
        "      <th>7_eleven</th>\n",
        "      <th>family_mart</th>\n",
-       "      <th>lawson</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>class</th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
@@ -172,35 +196,26 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>7_eleven</th>\n",
-       "      <td>43</td>\n",
-       "      <td>0</td>\n",
+       "      <td>39</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>family_mart</th>\n",
        "      <td>0</td>\n",
-       "      <td>39</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>lawson</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>44</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "class        7_eleven  family_mart  lawson\n",
-       "class                                     \n",
-       "7_eleven           43            0       0\n",
-       "family_mart         0           39       0\n",
-       "lawson              0            0      44"
+       "class        7_eleven  family_mart\n",
+       "class                             \n",
+       "7_eleven           39            0\n",
+       "family_mart         0           50"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,12 +226,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv(\"data/csv/train_labels.csv\")\n",
-    "valid.to_csv(\"data/csv/valid_labels.csv\")"
+    "train.to_csv(\"data/csv/train_labels2.csv\")\n",
+    "valid.to_csv(\"data/csv/valid_labels2.csv\")"
    ]
   },
   {
